--- a/module-app/app-conf/gateway.yml
+++ b/module-app/app-conf/gateway.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: gateway
+  config:
+    import: configtree:/workspace/secrets/*/
   cloud:
     bootstrap:
       enabled: true
@@ -9,19 +11,20 @@ spring:
         enabled: false
     gateway:
       default-filters:
-        - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
+        - SaveSession
+        - TokenRelay
+      #default-filters:
+      #    - NoCorsGatewayFilterFactory
+      #   - TokenRelay
+      #   - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin Access-Control-Request-Headers, RETAIN_FIRST
       globalcors:
         add-to-simple-url-handler-mapping: true
         corsConfigurations:
           '[/**]':
             allowedOrigins: "https://movie.greeta.net"
+            allowedMethods: "*"
             allowedHeaders: "*"
-            allowedMethods:
-              - GET
-              - POST
-              - DELETE
-              - PUT
-              - OPTIONS
+            allowCredentials: true
       discovery:
         locator:
           enabled: true
@@ -52,6 +55,17 @@ spring:
             - RewritePath=/movie/(?<path>.*), /$\{path}
   keycloak:
       server-url: http://keycloak-server:8080
+
+  redis:
+    connect-timeout: 2s
+    host: gateway-redis
+    port: 6379
+    timeout: 1s
+  session:
+    store-type: redis
+    timeout: 10m
+    redis:
+      namespace: erp:gateway
   security:
     oauth2: 
       # client:
@@ -94,15 +108,16 @@ jwt:
 
 erp-app:
   base-url: https://erp.greeta.net
-  redirect-url: ${erp-app.base-url}/*
+  redirect-url: ${erp-app.base-url}
 
 movie-app:
   base-url: https://movie.greeta.net
-  redirect-url: ${movie-app.base-url}/*
+  redirect-url: ${movie-app.base-url}
 
 logging:
   pattern: 
     console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
+
 
 server.forward-headers-strategy: framework
 
