--- a/module-app/app-conf/movie.yml
+++ b/module-app/app-conf/movie.yml
@@ -28,8 +28,8 @@ openapi:
 
 erp-app:
   base-url: https://erp.greeta.net
-  redirect-url: ${erp-app.base-url}/*
+  redirect-url: ${erp-app.base-url}
 
 movie-app:
   base-url: https://movie.greeta.net
-  redirect-url: ${movie-app.base-url}/*    
+  redirect-url: ${movie-app.base-url}
